Address PR review comments: fix hex case, types, docs, and logic
Co-authored-by: Zokiio <7363041+Zokiio@users.noreply.github.com>